// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a dropdown field with a confirm AND error state if both are available 1`] = `
<DocumentFragment>
  <div
    class="relative "
  >
    <select
      class="  max-w-full  text-night-black dark:text-max-white font-body bg-transparent border-b-2 focus:outline-none border-night-black dark:border-max-white"
    >
      <option
        disabled=""
        value="default"
      >
        Select an option
      </option>
      <option
        value="novice"
      >
        Novice
      </option>
      <option
        value="beginner"
      >
        Beginner
      </option>
      <option
        value="intermediate"
      >
        Intermediate
      </option>
      <option
        value="advanced"
      >
        Advanced
      </option>
    </select>
    <div
      class="pointer-events-none absolute left-0 top-0 -translate-x-full"
    >
      ❌
    </div>
    <div
      class="pointer-events-none absolute left-0 top-0 -translate-x-full"
    >
      ✅
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders a dropdown field with a confirm state 1`] = `
<DocumentFragment>
  <div
    class="relative "
  >
    <select
      class="  max-w-full  text-night-black dark:text-max-white font-body bg-transparent border-b-2 focus:outline-none border-night-black dark:border-max-white"
    >
      <option
        disabled=""
        value="default"
      >
        Select an option
      </option>
      <option
        value="novice"
      >
        Novice
      </option>
      <option
        value="beginner"
      >
        Beginner
      </option>
      <option
        value="intermediate"
      >
        Intermediate
      </option>
      <option
        value="advanced"
      >
        Advanced
      </option>
    </select>
    <div
      class="pointer-events-none absolute left-0 top-0 -translate-x-full"
    >
      ✅
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders a dropdown field with an error state 1`] = `
<DocumentFragment>
  <div
    class="relative "
  >
    <select
      class="  max-w-full  text-night-black dark:text-max-white font-body bg-transparent border-b-2 focus:outline-none border-night-black dark:border-max-white"
    >
      <option
        disabled=""
        value="default"
      >
        Select an option
      </option>
      <option
        value="novice"
      >
        Novice
      </option>
      <option
        value="beginner"
      >
        Beginner
      </option>
      <option
        value="intermediate"
      >
        Intermediate
      </option>
      <option
        value="advanced"
      >
        Advanced
      </option>
    </select>
    <div
      class="pointer-events-none absolute left-0 top-0 -translate-x-full"
    >
      ❌
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders a dropdown field with options 1`] = `
<DocumentFragment>
  <div
    class="relative "
  >
    <select
      class="  max-w-full  text-night-black dark:text-max-white font-body bg-transparent border-b-2 focus:outline-none border-night-black dark:border-max-white"
    >
      <option
        disabled=""
        value="default"
      >
        Select an option
      </option>
      <option
        value="novice"
      >
        Novice
      </option>
      <option
        value="beginner"
      >
        Beginner
      </option>
      <option
        value="intermediate"
      >
        Intermediate
      </option>
      <option
        value="advanced"
      >
        Advanced
      </option>
    </select>
  </div>
</DocumentFragment>
`;
